--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-invoke==2.2.0
 matplotlib==3.10.0
-my_project_name==0.0.0
-scikit_learn==1.6.0
+python-dotenv==1.0.1
+pytorch_lightning==2.5.0.post0
+scikit_learn==1.6.1
 torch==2.5.1
 typer==0.15.1
 fastapi==0.115.6
