--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 matplotlib==3.10.0
 python-dotenv==1.0.1
 pytorch_lightning==2.5.0.post0
+wandb==0.19.2
+lightning==2.5.0.post0
+lightning-utilities==0.11.9
 scikit_learn==1.6.1
 torch==2.5.1
 typer==0.15.1
