--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -41,3 +41,7 @@ jobs:
         run: |
           coverage run --source=mnist_project -m pytest tests/
           coverage report -m
+
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v2
+
