--- a/.github/workflows/stage_model.yaml
+++ b/.github/workflows/stage_model.yaml
@@ -33,6 +33,8 @@ jobs:
         operating-system: ["ubuntu-latest", "windows-latest", "macos-latest"]
 
     needs: identify_event
+    outputs:
+      model_name: ${{ steps.set_output.outputs.model_name }}
     env:
       WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
       WANDB_ENTITY: ${{ secrets.WANDB_ENTITY }}
@@ -55,7 +57,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
-        pip install -r requiremnets_dev.txt
+        pip install -r requirements_dev.txt
         pip list
 
     - name: Test model
@@ -70,6 +72,8 @@ jobs:
         operating-system: ["ubuntu-latest", "windows-latest", "macos-latest"]
 
     needs: identify_event
+    outputs:
+      model_name: ${{ steps.set_output.outputs.model_name }}
     env:
       WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
       WANDB_ENTITY: ${{ secrets.WANDB_ENTITY }}
