--- a/.github/workflows/stage_model.yaml
+++ b/.github/workflows/stage_model.yaml
@@ -6,13 +6,9 @@ on:
 
 jobs:
   identify_event:
-    runs-on: ${{ matrix.operating-system }}
-    strategy:
-      fail-fast: false
-      matrix:
-        operating-system: ["ubuntu-latest", "windows-latest", "macos-latest"]
-        
+    runs-on: ubuntu-latest
     outputs:
+      # We'll store the staged model name in an output variable
       model_name: ${{ steps.set_output.outputs.model_name }}
     steps:
       - name: Check event type
@@ -26,82 +22,66 @@ jobs:
           echo "model_name=${{ github.event.client_payload.artifact_version_string }}" >> $GITHUB_OUTPUT
 
   test_model:
-    runs-on: ${{ matrix.operating-system }}
-    strategy:
-      fail-fast: false
-      matrix:
-        operating-system: ["ubuntu-latest", "windows-latest", "macos-latest"]
-
+    # This job will run on three OSes if you like, but here's just one for brevity
+    runs-on: ubuntu-latest
     needs: identify_event
-    outputs:
-      model_name: ${{ steps.set_output.outputs.model_name }}
     env:
       WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
       WANDB_ENTITY: ${{ secrets.WANDB_ENTITY }}
       WANDB_PROJECT: ${{ secrets.WANDB_PROJECT }}
       MODEL_NAME: ${{ needs.identify_event.outputs.model_name }}
     steps:
-    - name: Echo model name
-      run: |
-        echo "Model name: $MODEL_NAME"
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.11
-        cache: 'pip'
-        cache-dependency-path: setup.py
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+          cache: 'pip'
+          cache-dependency-path: setup.py
 
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
-        pip install -r requirements_dev.txt
-        pip list
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+          pip install -r requirements_dev.txt
 
-    - name: Test model
-      run: |
-        pytest tests/performancetests/test_model.py
+      - name: Test model
+        run: |
+          export PYTHONPATH=$PYTHONPATH:$(pwd)
+          pytest tests/performancetests/test_model.py
 
   add_production_alias:
-    runs-on: ${{ matrix.operating-system }}
-    strategy:
-      fail-fast: false
-      matrix:
-        operating-system: ["ubuntu-latest", "windows-latest", "macos-latest"]
-
+    runs-on: ubuntu-latest
     needs: identify_event
-    outputs:
-      model_name: ${{ steps.set_output.outputs.model_name }}
     env:
       WANDB_API_KEY: ${{ secrets.WANDB_API_KEY }}
       WANDB_ENTITY: ${{ secrets.WANDB_ENTITY }}
       WANDB_PROJECT: ${{ secrets.WANDB_PROJECT }}
       MODEL_NAME: ${{ needs.identify_event.outputs.model_name }}
     steps:
-    - name: Echo model name
-      run: |
-        echo "Model name: $MODEL_NAME"
+      - name: Echo model name
+        run: |
+          echo "Model name: $MODEL_NAME"
 
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.11
-        cache: 'pip'
-        cache-dependency-path: setup.py
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
+          cache: 'pip'
+          cache-dependency-path: setup.py
 
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
-        pip list
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
 
-    - name: Add production alias
-      run: |
-        python scripts/link_model.py $MODEL_NAME -a production
+      - name: Add production alias
+        run: |
+          python link_model.py $MODEL_NAME -a production
+
 
 
 
