--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,4 +1,4 @@
-name: Unit Tests
+name: Unit Tests and Build
 
 on:
   push:
@@ -43,3 +43,22 @@ jobs:
 
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v2
+
+    build:
+      needs: test
+      if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+      runs-on: ubuntu-latest
+      steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Auth with GCP
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCLOUD_SERVICE_KEY }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Submit build
+        run: gcloud builds submit --config cloudbuild_containers.yaml
