--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -61,4 +61,4 @@ jobs:
       uses: google-github-actions/setup-gcloud@v2
 
     - name: Submit build
-      run: gcloud builds submit --config cloudbuild_containers.yaml
+      run: gcloud builds submit --config cloudbuild.yaml
