--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,7 @@ steps:
     'build',
     '.',
     '-t',
-    'europe-west1-docker.pkg.dev/united-concord-447713-c7/my-container-registry/image_test',
+    'europe-west1-docker.pkg.dev/united-concord-447713-c7/my-container-registry/$_IMAGE_NAME',
     '-f',
     './dockerfiles/train.dockerfile'
   ]
@@ -13,8 +13,10 @@ steps:
   id: 'Push container image'
   args: [
     'push',
-    'europe-west1-docker.pkg.dev/united-concord-447713-c7/my-container-registry/image_test'
+    'europe-west1-docker.pkg.dev/united-concord-447713-c7/my-container-registry/$_IMAGE_NAME'
   ]
 
 options:
   logging: CLOUD_LOGGING_ONLY
+substitutions:
+  _IMAGE_NAME: 'image_test'
