--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -61,5 +61,4 @@ jobs:
       uses: google-github-actions/setup-gcloud@v2
 
     - name: Submit build
-      run: gcloud builds submit --config cloudbuild.yaml \
-    --gcs-source-staging-dir=gs://my_mlops_data_bucket42/source
+      run: gcloud builds submit --config cloudbuild.yaml --gcs-source-staging-dir=gs://my_mlops_data_bucket42/source
