--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ lightning==2.5.0.post0
 lightning-utilities==0.11.9
 scikit_learn==1.6.1
 torch==2.5.1
+torchvision==0.20.1
 typer==0.15.1
 fastapi==0.115.6
 uvicorn==0.34.0
+httpx==0.28.1
